# python-package-template

./: .envrc  .envrc.jinja  .gitignore.jinja  .tool-versions  CHANGELOG.md  Justfile  Makefile  README.md  README.md.jinja  TODO  copier.yml  docker-compose.yml  docker-compose.yml.jinja  metadata.json  pyproject.toml  pyproject.toml.jinja  ruff.toml  setup.sh
.github/workflows/: build_and_publish.yml  build_and_publish_release_please.yml  build_and_publish_release_please.yml.jinja  build_and_publish_release_please_test_matrix.yml  build_and_publish_release_please_test_matrix.yml.jinja  build_and_publish_test_matrix.yml  build_and_publish_test_matrix.yml.jinja  repo-sync.yml.jinja
python_package_template/: __init__.py
tests/: test_import.py.jinja
{{project_name_snake_case}}/: __init__.py  __init__.py.jinja  version.py  version.py.jinja
