[project]
name = "python-project-template"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
keywords = []
urls = { "Repository" = "https://github.com/iloveitaly/python-project-template" }

[project.scripts]
python-project-template = "python_project_template:main"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true
