[project]
name = "python-package-template"
version = "0.2.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = []
urls = { "Repository" = "https://github.com/iloveitaly/python-package-template" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
python-package-template = "python_package_template:main"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.3.3"]
